# super-bot

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: routing.yaml
docs/: architecture.md  github_integration.md  routing.md
docs/progress/: 2026-03-27-0035.md
memory/: CHANGELOG.md
src/superbot/: __init__.py  main.py
src/superbot/adapters/: claude.py  github.py  ollama.py  remote.py
src/superbot/api/: app.py
src/superbot/gateway/: handler.py
src/superbot/router/: router.py
src/superbot/state/: logger.py
tests/: test_api.py  test_cli.py  test_context.py  test_handler.py  test_ollama_retry.py  test_orchestrator.py  test_router.py
tools/: capital_remote.py  router_remote.py  signal_parser_remote.py
